[package]
name = "asphaleia-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
hex = "0.4.3"
hkdf = "0.12.4"
ring = "0.17.8"
sha3 = "0.10.8"
thiserror = "1.0.63"
zeroize = "1.8.1"
serde = { version = "1.0.206", features = ["derive"] }
[dev-dependencies]
serde_json = "1.0.122"
