[package]
name = "asphaleia-storage"
version = "0.0.1"
edition = "2021"

[dependencies]
asphaleia-crypto = { path = "../asphaleia-crypto" }
bincode = "1.3.3"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
zstd = "0.13.2"
[dev-dependencies]
better-panic = "0.3.0"
tempfile = "3.12.0"
